--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,35 @@
-h1 {
-  background-color: blue;
-  color: black;
-  font-size: 32px;
-}
-
 * {
   margin: 0;
   box-sizing: border-box;
   padding: 0;
+}
+
+body {
+  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
+.header {
+  background-color: #F0F0F0;
+  height: 80px;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__imagen {
+  width: 60px;
+}
+
+.header__lista {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  list-style: none;
+  gap: 40px;
+}
+.header__lista li {
+  font-size: 18px;
 }
 
 /*# sourceMappingURL=style.css.map */
