--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,4 +4,5 @@
 @use "base/typography";
 @use "utilities/variables";
 @use "layout/header";
-@use "utilities/mixins"
+@use "utilities/mixins";
+@use "components/hero"
