--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,4 +5,5 @@
 @use "utilities/variables";
 @use "layout/header";
 @use "utilities/mixins";
-@use "components/hero"
+@use "components/hero";
+@use "components/buttons"
