--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,4 +6,5 @@
 @use "layout/header";
 @use "utilities/mixins";
 @use "components/hero";
-@use "components/buttons"
+@use "components/buttons";
+@use "components/especialidades"
