--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,4 +7,5 @@
 @use "utilities/mixins";
 @use "components/hero";
 @use "components/buttons";
-@use "components/especialidades"
+@use "components/especialidades";
+@use "components/cards";
