--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ body {
 }
 
 .especialidades {
-  height: 575px;
+  height: auto;
   background-color: #F0F0F0;
   width: 100%;
   padding: 30px;
@@ -75,6 +75,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-bottom: 75px;
 }
 
 .especialidades__titulo {
@@ -85,8 +86,18 @@ body {
 .card {
   height: 420px;
   width: 275px;
+  padding: 15px;
+  gap: 15px;
   border-radius: 30px;
   background-color: white;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+
+.card__imagen {
+  width: 150px;
 }
 
 /*# sourceMappingURL=style.css.map */
