--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 
-body {
+body, option, select {
   font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
@@ -98,6 +98,26 @@ body {
 
 .card__imagen {
   width: 150px;
+}
+
+.agenda {
+  height: auto;
+  background-color: #22E3A9;
+}
+.agenda section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.agenda__select {
+  width: 550px;
+  margin-bottom: 50px;
+  height: 40px;
+  border: none;
+  border-radius: 40px;
+  padding: 0 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
