--- a/assets/sass/components/_agendar.scss
+++ b/assets/sass/components/_agendar.scss
@@ -4,11 +4,20 @@
 .agenda {
     height: auto;
     background-color: v.$color-primario;
+    padding: 25px;
+    @include m.flex($align: center);
+    flex-direction: column;
 
     section {
         @include m.flex(center, center);
         flex-direction: column;
     }
+}
+
+.agenda__titulo {
+    color: v.$color-texto;
+    text-align: center;
+    margin-bottom: 50px;
 }
 
 .agenda__select {
@@ -18,4 +27,8 @@
     border: none;
     border-radius: 40px;
     padding: 0 20px;
+}
+
+.boton--agenda {
+    width: 550px;
 }
